force-app/main/default/objects/Payment_Batch__c/Payment_Batch__c.object-meta.xml
<CustomObject>
    <description>This is child object to payment plan</description>
    <label>Payment Batch</label>
    <nameField>
        <label>Payment Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>