force-app/main/default/objects/Payment_Batch__c/fields/Amount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Amount_percentage__c</fullName>
    <label>Amount %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>