force-app/main/default/objects/Payment_Batch__c/fields/Batch_Name_Localized__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name_Localized__c</fullName>
    <description>Field to Translate the Payment Batch Record Name</description>
    <formula>CASE(Name ,
     &quot;Aftersales 100% Final invoice&quot;, &quot;100% Loppulasku&quot;,
     &quot;50% Advance&quot;,&quot;50%&quot;,
     &quot;25% Advance&quot;,&quot;25%&quot;,
     &quot;50% Consumer&quot;,&quot;50%&quot;,
     &quot;50% Financing&quot;, &quot;50% Rahoitus&quot;,
     &quot;Consumer Financing&quot;,&quot;Kuluttaja Rahoitus&quot;,
    Name)
&amp; &quot; &quot; &amp;
CASE(TEXT(Type__c) ,
&quot;Deposit&quot;,&quot;ennakkomaksu&quot;,
&quot;Payment&quot;,&quot;ennakkomaksu kun sopimus on tehty&quot;,
&quot;Final Invoice&quot;,&quot;loppumaksu asennuksen jälkeen&quot;,
TEXT(Type__c))
&amp; &quot; 7 päivää netto.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Translated Payment Batch Name</inlineHelpText>
    <label>Batch Name Localized</label>
    <type>Text</type>
</CustomField>