force-app/main/default/objects/Payment_Batch__c/fields/Net_Batch_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Batch_Amount__c</fullName>
    <description>Payment Batch Amount including VAT</description>
    <formula>Payment_Plan__r.Opportunity__r.Net_Total_Price__c  * Amount_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount with VAT</inlineHelpText>
    <label>Net Batch Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>