force-app/main/default/objects/Payment_Batch__c/fields/Send_in_xml__c.field-meta.xml
<CustomField>
    <fullName>Send_in_xml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send in xml</label>
    <type>Checkbox</type>
</CustomField>